fix: 修复错误码及其适配和指标
