# internal/routers/api/docs/swagger.json
@@ -519,7 +519,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.SystemOperationLog"
+                                                "$ref": "#/definitions/model.OperationLog"
                                             }
                                         }
                                     }
@@ -1791,6 +1791,38 @@
                 }
             }
         },
+        "model.OperationLog": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "create_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "ip": {
+                    "type": "string"
+                },
+                "object": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                },
+                "user_agent": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.Resource": {
             "type": "object",
             "properties": {
@@ -1852,38 +1884,6 @@
                 }
             }
         },
-        "model.SystemOperationLog": {
-            "type": "object",
-            "properties": {
-                "action": {
-                    "type": "string"
-                },
-                "create_time": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "ip": {
-                    "type": "string"
-                },
-                "object": {
-                    "type": "string"
-                },
-                "result": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/model.User"
-                },
-                "user_agent": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "model.Tag": {
             "type": "object",
             "properties": {
@@ -1925,9 +1925,6 @@
                 "id": {
                     "type": "integer"
                 },
-                "is_del": {
-                    "type": "integer"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -1937,8 +1934,11 @@
                 "roles": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/model.Role"
                     }
+                },
+                "state": {
+                    "type": "integer"
                 },
                 "update_time": {
                     "type": "string"
@@ -2077,9 +2077,6 @@
                 "id": {
                     "type": "integer"
                 },
-                "is_del": {
-                    "type": "integer"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -2089,8 +2086,11 @@
                 "roles": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/model.Role"
                     }
+                },
+                "state": {
+                    "type": "integer"
                 },
                 "update_time": {
                     "type": "string"
@@ -2267,9 +2267,6 @@
                 "id": {
                     "type": "integer"
                 },
-                "is_del": {
-                    "type": "integer"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -2279,8 +2276,11 @@
                 "roles": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/model.Role"
                     }
+                },
+                "state": {
+                    "type": "integer"
                 },
                 "update_time": {
                     "type": "string"
