# internal/routers/api/v1/operation.go
@@ -33,11 +33,11 @@ func NewOperationController(store store.Factory) *OperationController {
 // @param object query integer false "对象"
 // @param page_num query integer false "页码"
 // @param page_size query integer false "每页数量"
-// @Success 200 {object} app.ListResponse{data=[]model.SystemOperationLog} "成功"
+// @Success 200 {object} app.ListResponse{data=[]model.OperationLog} "成功"
 // @Failure 400 {object} app.ErrResponse "请求错误"
 // @Failure 500 {object} app.ErrResponse "内部错误"
 // @Router /api/v1/operation [get]
-func (c *OperationController) List(ctx *gin.Context) {
+func (c *OperationController) List(ctx *gin.Context) (res interface{}, total int64, err error) {
 	values := ctx.Request.URL.Query()
 	object := values.Get("object")
 	action := values.Get("action")
@@ -48,10 +48,11 @@ func (c *OperationController) List(ctx *gin.Context) {
 	param := service.OperationListRequest{ListOption: model.ListOption{UserId: userId, Object: object, Action: action, Limit: limit, Page: page, Sort: sort}}
 	logs, total, err := c.srv.Operations().List(ctx.Request.Context(), &param)
 	if err != nil {
-		app.ToResponseCode(ctx.Writer, retcode.GetOperationsFail)
-		return
+		//app.ToResponseCode(ctx.Writer, retcode.GetOperationsFail)
+		return nil, 0, retcode.GetOperationsFail
 	}
-	app.ToResponseList(ctx.Writer, total, logs)
+	//app.ToResponseList(ctx.Writer, total, logs)
+	return logs, total, nil
 }
 
 // @Summary 创建操作日志
